css/style.css
/* ... */
#mapSearch {
        all: unset;
        font: 16px system-ui;
        color: #fff;
        height: 100%;
        width: 50%;
        padding: 6px 10px;
    background-color: black;
      }

      ::placeholder {
        color: #fff;
        opacity: 0.7; 
      }

     #searchIcon {
        color: #fff;
        fill: currentColor;
        width: 24px;
        height: 24px;

      }

      #mapSearchButton {
        all: unset;
        cursor: pointer;
        width: 44px;
        height: 44px;
      }

.noWrite{
    background: transparent !important;
    border: none;
}

 input.slideTrack[type="number"]
{
    background: transparent !important;
    border: none;
    width: 500px;
    text-align: left;
}


#psiCoreTable input[type="string"]{
    width: fit-content !important;
    background: transparent !important;
    border: none;
    
}

#routineCoreTable input[type="string"] {
    width: fit-content;
    max-width: fit-content;
    background: transparent !important;
    border: none;
}

#armourTable input[type="string"], #meleeTable input[type="string"]{
    max-width: 50px;
}

datalist {
    overflow: scroll;
}

table {
    background-image: url("../img/Table.jpeg");
    background-size: 1000px 670px;
    background-color: black;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    width: 100%;
    min-width: fit-content;
    border: 2px solid #8B0000;
    margin: 0px !important;

}

#credits {
    width: 100px !important;
}
.bioTable{
    width: 100%;
    
}
.bioPanel{
    background-image: none;
    background-color: transparent;
    border: none;
}

.bioPanel th, .bioPanel td, .bioPanel tr {
    border: none;    
}

input[type="string"] {
    text-align: center;
    height: 100%;
    width: 100% !important;
}

.ibtnDel{
    border: transparent;
    background-color: transparent;
    padding: 0;
    margin:auto;
  display:block;
}

.ibtnDel:hover{
    background-color: #8B000088;
}

#charsheet{
  margin: 0;
  padding: 0;
}

#charPic {

    display: flex;
    width: 300px !important;
    margin-left: auto;
    margin-right: auto;
}

.dropdown {
    width: 24px;
    padding: 0;
}

.fa-info-circle{
    color: white !important;

}
.fa-info-circle:hover{
    color: red !important;
}
input[type="text"]{
    min-width: 250px;
    width: fit-content;
    height: 100%;
}
input[type="number"] {
    width: 35px;
    max-width: fit-content;
    height: 20px;
    text-align: center;
}

th {
    background: #330066;
    text-align: center;
    color: white;
    max-width: 20%;
}
td,
input,
h2,h4,h6,b,
select {
    border: 0;
    width: fit-content;
    color: #e0cd67 !important;
    font-family: Calibri !important;
    font-weight: bold !important;
    text-align: center;
}

h2{
    width: fit-content;
}
.fa-question-circle {
    font-size:24px;
    color: white;
    outline: none !important;
    border: 0px;


}
.fa-question-circle:active,.fa-question-circle:focus{
    outline: none !important;
    border: 0px;
}


h2 { 
    margin-left: auto;
    margin-right: auto;
}

.leftAlign {
margin: 0 !important;
}

input[id*='item'], input[id*='weapon'], input[id*='robot'], input[id*='drone'], input[id*='armour'] {
    width: 40px !important;
}



th,
textarea {
   
    width: fit-content;
    font-family: Calibri !important;
    font-weight: bold !important;
    border: 0 none white;
    overflow: hidden;
    padding: 0;
    outline: none;
   
}



div {

    column-gap: 0px;
    margin-left: auto;
    margin-right: auto;
    box-sizing: border-box;
    
   
}

div .row{
    margin-left: 0px;
}

textarea[type="string"]{
    margin-left: auto;
    margin-right: auto;

}

div .col-xs-4, div .col-xs-6, .col-xs-12{
     height: fit-content;
    min-width: fit-content;
    width: 30%;
    padding: 0px;
    text-align: center;
    box-sizing: border-box;
}

.col-xs-12{
  width: 90%;
}
.order-list{
    font-size: 0.8em;
}
.order-list input{
    width: 30px;
}

#saveTable input[type="number"],
#playerLevel,
#atkBonus,
#playerXP {
    max-width: 35px !important;
    height: 35px;
    box-sizing: border-box;
    border: none;
    outline: 0;
    background: linear-gradient(purple, purple) top / calc(100% - 20px) 2px,
        linear-gradient(purple, purple) bottom/calc(100% - 20px) 2px,
        linear-gradient(purple, purple) left / 2px calc(100% - 20px),
        linear-gradient(purple, purple) right / 2px calc(100% - 20px),
        linear-gradient(
                to bottom right,
                transparent calc(50% - 2px),
                purple,
                transparent calc(50% + 2px)
            )
            top left/10px 10px,
        linear-gradient(
                to bottom right,
                transparent calc(50% - 2px),
                purple,
                transparent calc(50% + 2px)
            )
            bottom right/10px 10px,
        linear-gradient(
                to bottom left,
                transparent calc(50% - 2px),
                purple,
                transparent calc(50% + 2px)
            )
            top right/10px 10px,
        linear-gradient(
                to bottom left,
                transparent calc(50% - 2px),
                purple,
                transparent calc(50% + 2px)
            )
            bottom left/10px 10px;

    background-repeat: no-repeat;
}

input {
    background-color: black;
    border: 2px solid #609;
}

select, input[type="text"] {
    border-radius: 15px 50px;
    border: 2px solid #609;
    text-align: center;
    
    text-align-last: center;
    height: fit-content;
    font-weight: normal !important;
        background-color:black;
}
input:focus,
select:focus,
input[type="text"]:focus,
textarea:focus,
button:focus {
    outline: none;
}



body {
    background-image: url("../img/Page_Background.jpeg");
      font-family: 'Noto Sans', 'Helvetica';
background-size: 2880px 1602px;
}
/* ... */

